# verin

./: Cargo.toml  README.md  flake.nix
example-site/: article.liquid  config.toml  foo.md  index.liquid  not_found.liquid
ssg/: Cargo.toml
ssg/src/: html.rs  main.rs
ts-highlight-html/: Cargo.toml  build.rs
ts-highlight-html/src/: lib.rs  theme.rs
verin/: Cargo.toml
verin/src/: html.rs  main.rs  refresh.rs
xtask/: Cargo.toml
xtask/src/: main.rs
