[package]
name = "ssg"
version = "0.1.0"
edition = "2021"
default-run = "ssg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.0.0"
chrono = "0.4.22"
clap = { version = "3.2.20", features = ["derive"] }
color-eyre = "0.6.2"
glob = "0.3.0"
itertools = "0.10.3"
liquid = "0.26.0"
pulldown-cmark = "0.9.2"
serde = { version = "1.0.144", features = ["derive"] }
toml = "0.5.9"
ts-highlight-html = { path = "../ts-highlight-html"}
