[package]
name = "ssg"
version = "0.1.0"
edition = "2021"
default-run = "ssg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.9.0"
chrono = "0.4.32"
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.2"
glob = "0.3.1"
itertools = "0.12.0"
liquid = "0.26.4"
pulldown-cmark = "0.9.3"
serde = { version = "1.0.195", features = ["derive"] }
toml = "0.8.8"
ts-highlight-html = { path = "../ts-highlight-html"}
