[package]
name = "ts-highlight-html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
thiserror = "1.0.58"
tree-sitter-highlight = "0.20.1"

tree-sitter-javascript = "0.20"
tree-sitter-json = "0.20.2"
tree-sitter-linkerscript = "1.0.0"
tree-sitter-nix = { git = "https://github.com/cstrahan/tree-sitter-nix" }
tree-sitter-rust = { git = "https://github.com/tree-sitter/tree-sitter-rust" }
tree-sitter-toml = "0.20"
tree-sitter-yaml = { git = "https://github.com/traxys/tree-sitter-yaml" }
tree-sitter-asm = { git = "https://github.com/RubixDev/tree-sitter-asm" }
tree-sitter-devicetree = { git = "https://github.com/joelspadin/tree-sitter-devicetree", rev = "v0.9.0" }
paste = "1.0.14"
