[package]
name = "ts-highlight-html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
thiserror = "1.0.64"
tree-sitter-highlight = "0.23"

tree-sitter-javascript = "0.23"
tree-sitter-json = "0.23"
tree-sitter-linkerscript = { git = "https://github.com/traxys/tree-sitter-linkerscript" }
tree-sitter-nix = { git = "https://github.com/traxys/tree-sitter-nix" }
tree-sitter-rust = "0.23"
tree-sitter-toml-ng = { git = "https://github.com/traxys/tree-sitter-toml" }
tree-sitter-yaml = { git = "https://github.com/traxys/tree-sitter-yaml" }
tree-sitter-asm = { git = "https://github.com/traxys/tree-sitter-asm" }
tree-sitter-devicetree = { git = "https://github.com/traxys/tree-sitter-devicetree" }
paste = "1.0.15"
