[package]
name = "ts-highlight-html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.21.3"
thiserror = "2.0.18"
tree-sitter-highlight = { git = "https://forgejo.familleboyer.net/traxys/tree-sitter", branch = "ts-captures" }

tree-sitter-javascript = "0.25"
tree-sitter-json = "0.24"
tree-sitter-linkerscript = { git = "https://github.com/traxys/tree-sitter-linkerscript" }
tree-sitter-nix = "0.3"
tree-sitter-rust = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-yaml = "0.7"
tree-sitter-asm = "0.24"
tree-sitter-devicetree = "0.15"
tree-sitter-vvk = { git = "https://forgejo.familleboyer.net/traxys/tree-sitter-vvk.git" }
paste = "1.0.15"
tree-sitter = "0.26.3"

[build-dependencies]
prettyplease = "0.2.37"
quote = "1.0.43"
syn = "2.0.114"
