[package]
name = "verin"
version = "0.1.0"
edition = "2021"
default-run = "verin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asciimath-rs = "0.6.2"
bstr = "1.9.1"
bus = "2.4.1"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
glob = "0.3.1"
itertools = "0.12.1"
liquid = "0.26.4"
pulldown-cmark = "0.11"
pulldown-cmark-escape = "0.10.0"
rss = { version = "2.0.7", features = ["with-serde"] }
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
ts-highlight-html = { path = "../ts-highlight-html" }
tungstenite = "0.21.0"
