[package]
name = "verin"
version = "0.1.0"
edition = "2021"
default-run = "verin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asciimath-rs = "0.6.2"
bstr = "1.10.0"
bus = "2.4.1"
chrono = "0.4.38"
clap = { version = "4.5.18", features = ["derive"] }
color-eyre = "0.6.3"
glob = "0.3.1"
itertools = "0.13.0"
liquid = "0.26.9"
pulldown-cmark = "0.12"
pulldown-cmark-escape = "0.11.0"
rss = { version = "2.0.9", features = ["with-serde"] }
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
toml = "0.8.19"
ts-highlight-html = { path = "../ts-highlight-html" }
tungstenite = "0.24.0"
