[package]
name = "verin"
version = "0.1.0"
edition = "2021"
default-run = "verin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asciimath-rs = "0.6.2"
bstr = "1.12.1"
bus = "2.4.1"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
color-eyre = "0.6.5"
glob = "0.3.3"
itertools = "0.14.0"
liquid = "0.26.11"
pulldown-cmark = "0.13"
pulldown-cmark-escape = "0.11.0"
rss = { version = "2.0.12", features = ["with-serde"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "0.9.11"
ts-highlight-html = { path = "../ts-highlight-html" }
tungstenite = "0.28.0"
