[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bus = "2.4.1"
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
duct = "0.13.7"
tungstenite = "0.21.0"
